--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/table": "^2.0.33",
+    "@reduxjs/toolkit": "^2.2.5",
+    "date-fns": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "swr": "^2.2.5"
   },
   "devDependencies": {
