--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "vercel": "^34.2.7"
   },
   "devDependencies": {
     "@types/node": "^20",
