--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/utils/*": [
+        "src/utils/*"
+      ]
+    }
   }
 }
